# word-cloud

./: .gitignore  pyproject.toml
helm/word-cloud/: Chart.yaml  values.yaml
helm/word-cloud/templates/: fluentbit.yaml  kafka.yaml  kafkacat.yaml  redis.yaml  topic.yaml
