[tool.poetry]
name = "word-cloud"
version = "0.1.0"
description = "A simple word-cloud service"
authors = ["Jose Rojas <jose.rojas@email.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jarojasm95/word-cloud"
keywords = [
    "python",
    "kafka",
    "word-cloud",
]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.2"
beautifulsoup4 = "^4.9.3"
nltk = "^3.6.2"
respx = "^0.17.0"
uvicorn = "^0.13.4"
wordcloud = "^1.8.1"
aiofiles = "^0.7.0"
confluent-kafka = "^1.7.0"
redis = "^3.5.3"
aiofluent-python = "^0.3.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
